# hledger-webapp

./: .gitignore  CLAUDE.md  Dockerfile  app.py  compose.yaml  hledger.py  nicegui_app.py  pyproject.toml  pyrightconfig.json  style.css
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-03-14-tailwind-v4-standalone.md
docs/superpowers/specs/: 2026-03-13-liquid-glass-design.md  2026-03-13-tailwind-v4-setup-design.md  2026-03-14-tailwind-v4-standalone-design.md  2026-03-31-avg-monthly-expense-design.md
static/: manifest.json  style.css
templates/: balances.html  balancesheet.html  base.html  budget.html  income.html  macros.html  register.html  transactions.html
templates/partials/: avg_content.html  bal_content.html  bs_content.html  budget_content.html  depth_selector.html  is_content.html  month_picker.html  reg_content.html  report_content.html  skeleton.html  sort_toggle.html  tx_detail.html  tx_form.html  tx_list.html
