[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "litestar>=2.21.0",
    "nicegui>=2.0.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ruff>=0.15.1",
]
